2017-07-07         Arnold D. Robbins     <arnold@skeeve.com>

	Remove warnings from GCC 7.1 compilation.

	* awk.h (fatal_tag_valid): Change type to int.
	* awkgram.y (yylex): Set did_newline to true instead of using ++.
	* builtin.c (format_tree): Set lj to true instead of using ++.
	* cmd.h (pager_quit_tag_valid): Change type to int.
	* debug.c (pager_quit_tag_valid): Change type to int.
	(do_clear): Make bp_found an int, change uses.
	(do_run): Treat fatal_tag_valid as an int.
	* msg.c (fatal_tag_valid): Change type to int.

2017-01-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* interpret.h [UNFIELD]: Fix condition for assignment from
	value with valref == 1. Fixes problems introduced at gawk 4.1.2.

2017-01-27         Arnold D. Robbins     <arnold@skeeve.com>

	* interpret.h: Update copyright year.
	* debug.c (do_run): Rework error message to ease translation.
	Thanks to Rafael Fontenelle <rafaelff@gnome.org> and to
	Eli Zaretskii <eliz@gnu.org>.

2017-01-15         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* interpret.h (r_interpret): Fix bug in Op_assign_concat reported
	on Cygwin mailing list. The string concatenation optimization was
	not updating the node correctly by setting STRING and STRCUR flags
	and setting stfmt.

2016-11-04  Eli Zaretskii  <eliz@gnu.org>

	* builtin.c (efwrite) [__MINGW32__]: Call w32_maybe_set_errno if
	errno is not set or set to EINVAL.

	* nonposix.h (w32_maybe_set_errno) [__MINGW32__]: Add prototype.

2016-10-31         Arnold D. Robbins     <arnold@skeeve.com>

	Fix valgrind issues.

	* io.c (init_awkpath): Need to allocate max_path+3 pointers.

2016-10-26         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (init_awkpath): Set max path len for leading separator.

2016-10-25         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (init_awkpath): Restore documented behavior whereby
	null elements represent the current directory. Sheesh.